# router/app.go
@@ -20,6 +20,7 @@ func Router() *gin.Engine {
 	//用户
 	r.GET("/userdetail", service.GetUserDetail) //获取用户详情页面
 	r.POST("/login", service.Login)             //用户登录
+	r.POST("/sendcode", service.SendCode)       //发送验证码
 	//提交记录
 	r.GET("/submitlist", service.GetSubmitList) //提交记录数据
 	return r
